fix(styles): applied fix to .App class style, so nothing overflows the container horizontally

--- a/react-portfolio/src/components/Hero/Hero.module.css
+++ b/react-portfolio/src/components/Hero/Hero.module.css
@@ -87,7 +87,7 @@
     position: absolute;
     width: 70vw;
     height: 50vw;
-    min-width: 350px;
+    min-height: 350px;
     min-width: 250px;
     top: 246px;
     right: -25vw;
